- update sonar config

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,8 +1,8 @@
-sonar.projectKey=copasi_COPASI
-sonar.organization=copasi
-sonar.sources=copasi
-sonar.exclusions=copasi/bindings/**/*,copasi/MIRIAM/WebServicesIssues/*,**/*.java,**/*_lex.*,**/*_yacc.*,**/COptionParser.*,**/sbml/unittest/**/*
+sonar.projectKey=fbergmann_libsbml_test
+sonar.organization=fbergmann
+sonar.sources=src,examples
+sonar.exclusions=**/*.java
 sonar.host.url=https://sonarcloud.io
-sonar.projectName=COPASI
+sonar.projectName=libsbml_test
 sonar.cfamily.build-wrapper-output=bw-output
 sonar.sourceEncoding=UTF-8
