--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=fbergmann_libsbml_test
 sonar.organization=fbergmann
 sonar.sources=src,examples
-sonar.exclusions=**/*.java
+sonar.exclusions=**/*.java,src/bindings/**.*,**/*.xml
 sonar.host.url=https://sonarcloud.io
 sonar.projectName=libsbml_test
 sonar.cfamily.build-wrapper-output=bw-output
